Добавлено 2 раздела на сатйе (раздел услуг и раздел как мы работаем)

--- a/index.html
+++ b/index.html
@@ -51,16 +51,69 @@
                             Розробка сайтів від команди Studio 37
                         </h1>
                         <p class="main-block__text">
-                            Создание сайтов от идеи до первых клиентов
+                            Створення сайтів від ідеї до перших клієнтів
                         </p>
                     </div>
                     <div class="main-block__buttons">
                         <a href="" class="main-block__button main-block__button_orange">Обговорити ідею</a>
-                        <a href="" class="main-block__button main-block__button_border">Замовити зараз</a>
+                        <a href="" class="main-block__button main-block__button_orange">Замовити зараз</a>
                     </div>
                 </div>
                 <div class="main-block_image _ibg">
                     <img src="img/main/main_offer.jpg" alt="cover">
+                </div>
+            </div>
+            <div class="page-null"></div>
+            <div class="page__services-block services-block">
+                <div class="services-block__container _container">
+                    <h1 class="services-block__title">ЩО МИ РОБИМО</h1>
+                    <div class="services-block__body">
+                        <div class="services-block__card">
+                            <h2 class="services-block__card-title">Лендинг</h2>
+                            <p class="services-block__card-text">Це частіше за все односторінкові сайти на яких клієнт не відволікається на велику кількість інформації і в нього є можливість зробити цільову дію. Такі сайти частіше за все роблять для бізнесу у якого ще не велика кількість послуг але клієнти вже потрібні сьогодні</p>
+                            <p class="services-block__card-price">Ціна від <b>4000 грн</b></p>
+                            <img class="services-block__card_img-landing" src="img/services/card1.jpg" alt="card1">
+                            <a href="" class="services-block__button">Думаю цей</a>
+                        </div>
+                        <div class="services-block__card">
+                            <h2 class="services-block__card-title">Інтернет-магазин</h2>
+                            <p class="services-block__card-text">Багатосторінковий сайт з пошуком і фільтрами. Підходить для тих хто хоче привернути увагу не тільки до компанії і її конкретної послуги, але і надати можливість зручно обрати товар або послугу з каталогу. Також вагомою перевагою є те що можна рекламувати конкретний товар</p>
+                            <p class="services-block__card-price">Ціна від <b>7000 грн</b></p>
+                            <img class="services-block__card_img-landing" src="img/services/card2.jpg" alt="card2">
+                            <a href="" class="services-block__button">Думаю цей</a>
+                        </div>
+                        <div class="services-block__card">
+                            <h2 class="services-block__card-title">Корпоративний сайт</h2>
+                            <p class="services-block__card-text">Багатосторінковий сайт для створення іміджу компанії і пошуку нових клієнтів або партнерів. <br>В Вашій компанії працює багато спеціалістів, але кожен проект прораховується індивідуально від потреб замовленика - тоді вам потрібен саме Корпоративний сайт</p>
+                            <p class="services-block__card-price">Ціна від <b>5000 грн</b></p>
+                            <img class="services-block__card_img-landing" src="img/services/card3.jpg" alt="card3">
+                            <a href="" class="services-block__button">Думаю цей</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="page__services-etaps etaps-block">
+                <h1 class="etaps-block__title">
+                    Етапи роботи
+                </h1>
+                <div class="etaps-block__container">
+                    <div class="etaps-block_image _ibg">
+                        <img src="img/etaps/bg_etaps.jpg" alt="cover">
+                    </div>
+                    <div class="etaps-block__body">
+                        <div class="etaps-block__card_1 etaps-block__card">
+                            <h2 class="etaps-block__card-title">Обговорення проекту</h2>
+                            <p class="etaps-block__card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro corrupti a vitae dignissimos ipsam? Harum voluptatem, eum eius corrupti dignissimos magnam dolore aliquam animi labore. Accusamus consectetur nobis esse corporis!</p>
+                        </div>
+                        <div class="etaps-block__card_2 etaps-block__card">
+                            <h2 class="etaps-block__card-title">Аналіз цільової аудиторії і конкурентів</h2>
+                            <p class="etaps-block__card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat deleniti placeat quas dolorem? Natus ipsa facilis sint amet laborum id nam ipsam cumque placeat, temporibus vel possimus. Aliquam, dignissimos dolores!</p>
+                        </div>
+                        <div class="etaps-block__card_3 etaps-block__card">
+                            <h2 class="etaps-block__card-title">Створення сайту</h2>
+                            <p class="etaps-block__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quos autem, dolor tempore recusandae reiciendis mollitia enim amet aut, quasi repellendus consequuntur assumenda voluptate ipsam ex rem debitis aperiam praesentium.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
