Готовая верстка одностраничника пока без функционала и адаптива

--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
                             <a href="#" class="menu__link">Етапи роботи</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Ціни</a>
-                        </li>
-                        <li class="menu__item">
                             <a href="#" class="menu__link">Відгуки</a>
                         </li>
                         <li class="menu__item">
@@ -116,7 +113,55 @@
                     </div>
                 </div>
             </div>
+            <div class="page__idea-block idea-block">
+                <div class="idea-block__container _container">
+                    <div>
+                        <h1 class="idea-block__title">Маєте ідею?</h1>
+                        <p class="idea-block__text">Зв'яжіться з нами і ми знайдемо як її реалізувати</p>
+                    </div>
+                    <a class="idea-block__href" href="#">Залишити заявку</a>
+                </div>
+            </div>
         </main>
+        <footer class="footer">
+            <div class="footer-card-left">
+                <h1>Напишіть нам!</h1>
+                <div>
+                    <form action="">
+                        <div class="footer-input_name_phone">
+                            <input class="footer-input_name" type="text" name="your-name" placeholder="Ім'я:">
+                            <input class="footer-input_phone" type="text" name="your-phone" placeholder="Телефон:">
+                        </div>
+                        <input class="footer-input_email" type="email" name="your-email" placeholder="Email:">
+                        <textarea class="footer-textarea" name="your-message" cols="40" rows="6" placeholder="Введіть повідомлення:"></textarea>
+                        <button class="footer-button">Відіслати листа</button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer-card-right">
+                <h1>Наші контакти</h1>
+                <div>
+                    <div>
+                        <div class="footer-telefon-div">
+                            <img class="" src="img/footer/telefon_ico.png" alt="telefon">
+                            <p class="footer_my-telefon">+380632761621</p>
+                        </div>
+                        <div class="footer-email-div">
+                            <img src="img/footer/email_ico.png" alt="Email">
+                            <span class="footer_my-email">semenzelenskij@gmail.com</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_messegers">
+                    <a href="viber://chat?number=%2B380632761621">
+                        <img src="img/footer/viber-ico.png" alt="viber-ico">
+                    </a>
+                    <a href="https://t.me/maudzydun" target="_blank">
+                        <img src="img/footer/telegram_ico.png" alt="telefon_ico">
+                    </a>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
