Адаптация под разные экраны, переделал блоки для более гибкой адаптивности

--- a/index.html
+++ b/index.html
@@ -5,163 +5,179 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap" rel="stylesheet" />
-    <!-- &subset=cyrillic-ext    ********* вконце тега линк с подключением шрифта - подключение кирилицы на сайте-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap&subset=cyrillic-ext" rel="stylesheet" />
     <title>Студия 37 - разработка сайтов под ключ</title>
 </head>
 <body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="header__container _container">
-                <a href="#" class="heder__logo">
-                    <img src="img/img_header/IMG_8755.PNG" class="heder__logo_img" alt="heder__logo">
-                </a>
-                <nav class="heder__menu menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Головна</a>
+    <header>
+        <div  class="header _container">
+            <div class="header-logo">
+                <img src="img/header/logo.PNG" alt="logo">
+            </div>
+            <div class="header-nav">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="">Головна</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Види послуг</a>
+                        <li>
+                            <a href="">Наші послуги</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Етапи роботи</a>
+                        <li>
+                            <a href="">Етапи роботи</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Відгуки</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Звязок</a>
+                        <li>
+                            <a href="">Зв'язок</a>
                         </li>
                     </ul>
                 </nav>
-                <button class="header_button button">
-                    <span class="button__text">Зв'язатися з нами</span>
+            </div>
+            <div class="header-contacts">
+                <div>
+                    <button>
+                        <a href="">Зв'язатися з нами</a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="main">
+        <div class="main-offer_block">
+            <div>
+                <div>
+                    <h1>Розробка сайтів від команди Studio 37</h1>
+                </div>
+                <div>
+                    <p>
+                        Створення сайтів від ідеї до перших клієнтів
+                    </p>
+                </div>
+            </div>
+            <div class="main-offer_block-buttons">
+                <button>
+                    <a href="">Обговорити ідею</a>
+                </button>
+                <button>
+                    <a href="">Замовити зараз</a>
                 </button>
             </div>
-        </header>
-        <main class="page">
-            <div class="page__main-block main-block">
-                <div class="main-block__container _container">
-                    <div class="main-block__body">
-                        <h1 class="main-block__title">
-                            Розробка сайтів від команди Studio 37
-                        </h1>
-                        <p class="main-block__text">
-                            Створення сайтів від ідеї до перших клієнтів
+        </div>
+        
+    </div>
+    <div class="services">
+        <div class="_container">
+            <div>
+                <h1>ЩО МИ РОБИМО</h1>
+            </div>
+            <div class="services-main_block">
+                <div class="services-card services-landing">
+                    <div class="services-card_text-block">
+                        <h3>Лендінг</h3>
+                        <p>
+                            Це частіше за все односторінкові сайти на яких клієнт не відволікається на велику кількість інформації і в нього є можливість зробити цільову дію. Такі сайти частіше за все роблять для бізнесу у якого ще не велика кількість послуг а клієнти потрібні вже сьогодні
+                            <br>
                         </p>
                     </div>
-                    <div class="main-block__buttons">
-                        <a href="" class="main-block__button main-block__button_orange">Обговорити ідею</a>
-                        <a href="" class="main-block__button main-block__button_orange">Замовити зараз</a>
+                    <div class="services_price">
+                        Ціна від <b>4000 грн</b>
+                    </div>
+                    <div class="services_button">
+                        <a href="">Думаю цей</a>
                     </div>
                 </div>
-                <div class="main-block_image _ibg">
-                    <img src="img/main/main_offer.jpg" alt="cover">
-                </div>
-            </div>
-            <div class="page-null"></div>
-            <div class="page__services-block services-block">
-                <div class="services-block__container _container">
-                    <h1 class="services-block__title">ЩО МИ РОБИМО</h1>
-                    <div class="services-block__body">
-                        <div class="services-block__card">
-                            <h2 class="services-block__card-title">Лендинг</h2>
-                            <p class="services-block__card-text">Це частіше за все односторінкові сайти на яких клієнт не відволікається на велику кількість інформації і в нього є можливість зробити цільову дію. Такі сайти частіше за все роблять для бізнесу у якого ще не велика кількість послуг але клієнти вже потрібні сьогодні</p>
-                            <p class="services-block__card-price">Ціна від <b>4000 грн</b></p>
-                            <img class="services-block__card_img-landing" src="img/services/card1.jpg" alt="card1">
-                            <a href="" class="services-block__button">Думаю цей</a>
-                        </div>
-                        <div class="services-block__card">
-                            <h2 class="services-block__card-title">Інтернет-магазин</h2>
-                            <p class="services-block__card-text">Багатосторінковий сайт з пошуком і фільтрами. Підходить для тих хто хоче привернути увагу не тільки до компанії і її конкретної послуги, але і надати можливість зручно обрати товар або послугу з каталогу. Також вагомою перевагою є те що можна рекламувати конкретний товар</p>
-                            <p class="services-block__card-price">Ціна від <b>7000 грн</b></p>
-                            <img class="services-block__card_img-landing" src="img/services/card2.jpg" alt="card2">
-                            <a href="" class="services-block__button">Думаю цей</a>
-                        </div>
-                        <div class="services-block__card">
-                            <h2 class="services-block__card-title">Корпоративний сайт</h2>
-                            <p class="services-block__card-text">Багатосторінковий сайт для створення іміджу компанії і пошуку нових клієнтів або партнерів. <br>В Вашій компанії працює багато спеціалістів, але кожен проект прораховується індивідуально від потреб замовленика - тоді вам потрібен саме Корпоративний сайт</p>
-                            <p class="services-block__card-price">Ціна від <b>5000 грн</b></p>
-                            <img class="services-block__card_img-landing" src="img/services/card3.jpg" alt="card3">
-                            <a href="" class="services-block__button">Думаю цей</a>
-                        </div>
+                <div class="services-card services-im">
+                    <div class="services-card_text-block">
+                        <h3>Інтернет-магазин</h3>
+                        <p>
+                            Багатосторінковий сайт з пошуком і фільтрами. Підходить для тих хто хоче привернути увагу не тільки до компанії, а і надати можливість зручно обрати товар або послугу з каталогу для замовлення через кошик. Також вагомою перевагою є те що можна рекламувати конкретний товар
+                        </p>
+                    </div>
+                    <div class="services_price">
+                        Ціна від <b>4000 грн</b>
+                    </div>
+                    <div class="services_button">
+                        <a href="">Думаю цей</a>
                     </div>
                 </div>
-            </div>
-            <div class="page__services-etaps etaps-block">
-                <h1 class="etaps-block__title">
-                    Етапи роботи
-                </h1>
-                <div class="etaps-block__container">
-                    <div class="etaps-block_image _ibg">
-                        <img src="img/etaps/bg_etaps.jpg" alt="cover">
+                <div class="services-card services-korp">
+                    <div class="services-card_text-block">
+                        <h3>Корпоративний сайт</h3>
+                        <p>
+                            Багатосторінковий сайт для відображення іміджу компанії і пошуку нових клієнтів або партнерів. <br>В Вашій компанії працює багато спеціалістів і кожен проект прораховується індивідуально від потреб замовленика - тоді вам потрібен саме Корпоративний сайт
+                        </p>
                     </div>
-                    <div class="etaps-block__body">
-                        <div class="etaps-block__card_1 etaps-block__card">
-                            <h2 class="etaps-block__card-title">Обговорення проекту</h2>
-                            <p class="etaps-block__card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro corrupti a vitae dignissimos ipsam? Harum voluptatem, eum eius corrupti dignissimos magnam dolore aliquam animi labore. Accusamus consectetur nobis esse corporis!</p>
-                        </div>
-                        <div class="etaps-block__card_2 etaps-block__card">
-                            <h2 class="etaps-block__card-title">Аналіз цільової аудиторії і конкурентів</h2>
-                            <p class="etaps-block__card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat deleniti placeat quas dolorem? Natus ipsa facilis sint amet laborum id nam ipsam cumque placeat, temporibus vel possimus. Aliquam, dignissimos dolores!</p>
-                        </div>
-                        <div class="etaps-block__card_3 etaps-block__card">
-                            <h2 class="etaps-block__card-title">Створення сайту</h2>
-                            <p class="etaps-block__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quos autem, dolor tempore recusandae reiciendis mollitia enim amet aut, quasi repellendus consequuntur assumenda voluptate ipsam ex rem debitis aperiam praesentium.</p>
-                        </div>
+                    <div class="services_price">
+                        Ціна від <b>4000 грн</b>
+                    </div>
+                    <div class="services_button">
+                        <a href="">Думаю цей</a>
                     </div>
                 </div>
             </div>
-            <div class="page__idea-block idea-block">
-                <div class="idea-block__container _container">
-                    <div>
-                        <h1 class="idea-block__title">Маєте ідею?</h1>
-                        <p class="idea-block__text">Зв'яжіться з нами і ми знайдемо як її реалізувати</p>
-                    </div>
-                    <a class="idea-block__href" href="#">Залишити заявку</a>
-                </div>
-            </div>
-        </main>
-        <footer class="footer">
-            <div class="footer-card-left">
-                <h1>Напишіть нам!</h1>
-                <div>
-                    <form action="">
-                        <div class="footer-input_name_phone">
-                            <input class="footer-input_name" type="text" name="your-name" placeholder="Ім'я:">
-                            <input class="footer-input_phone" type="text" name="your-phone" placeholder="Телефон:">
-                        </div>
-                        <input class="footer-input_email" type="email" name="your-email" placeholder="Email:">
-                        <textarea class="footer-textarea" name="your-message" cols="40" rows="6" placeholder="Введіть повідомлення:"></textarea>
-                        <button class="footer-button">Відіслати листа</button>
-                    </form>
-                </div>
-            </div>
-            <div class="footer-card-right">
-                <h1>Наші контакти</h1>
-                <div>
-                    <div>
-                        <div class="footer-telefon-div">
-                            <img class="" src="img/footer/telefon_ico.png" alt="telefon">
-                            <p class="footer_my-telefon">+380632761621</p>
-                        </div>
-                        <div class="footer-email-div">
-                            <img src="img/footer/email_ico.png" alt="Email">
-                            <span class="footer_my-email">semenzelenskij@gmail.com</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer_messegers">
-                    <a href="viber://chat?number=%2B380632761621">
-                        <img src="img/footer/viber-ico.png" alt="viber-ico">
-                    </a>
-                    <a href="https://t.me/maudzydun" target="_blank">
-                        <img src="img/footer/telegram_ico.png" alt="telefon_ico">
-                    </a>
-                </div>
-            </div>
-        </footer>
+        </div>
     </div>
+    <div class="etaps">
+        <h1>Етапи роботи</h1>
+        <div class="etaps_main-block">
+            <div class="etaps-card etaps-card1">
+                <h3>Обговорення проекту</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta facilis voluptatem tempore aut numquam nisi iure, hic impedit commodi sequi et in! Dolor, libero voluptatibus! Eum dignissimos delectus earum.</p>
+            </div>
+            <div class="etaps-card etaps-card2">
+                <h3>Аналіз цільової аудиторії і конкурентів</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta facilis voluptatem tempore aut numquam nisi iure, hic impedit commodi sequi et in! Dolor, libero voluptatibus! Eum dignissimos delectus earum.</p>
+            </div>
+            <div class="etaps-card etaps-card3">
+                <h3>Створення сайту</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta facilis voluptatem tempore aut numquam nisi iure, hic impedit commodi sequi et in! Dolor, libero voluptatibus! Eum dignissimos delectus earum.</p>
+            </div>
+        </div>
+    </div>
+    <div class="idea">
+        <div class="idea_container _container">
+            <div class="idea_text">
+                <h1>Маєте ідею?</h1>
+                <p>Зв'яжіться з нами і ми знайдемо як її реалізувати</p>
+            </div>
+            <button class="idea_button">
+                <a href="">Залишити заявку</a>
+            </button>
+        </div>
+    </div>
+    <footer>
+        <div class="footer-form">
+            <h1>Напишіть нам!</h1>
+            <form action="">
+                <input class="footer-input_name" type="text" name="your-name" placeholder="Ім'я:">
+                <input class="footer-input_phone" type="text" name="your-phone" placeholder="Телефон:">
+                <input class="footer-input_email" type="email" name="your-email" placeholder="Email:">
+                <textarea class="footer-textarea" name="your-message" cols="40" rows="6" placeholder="Введіть повідомлення:"></textarea>
+                <button class="footer-button">
+                    <a href="">Відіслати листа</a>
+                </button>
+            </form>
+        </div>
+        <div class="footer_contacts">
+            <h1>Наші контакти</h1>
+            <div class="footer_contacts-card">
+                <div class="footer-telefon">
+                    <img src="img/footer/telefon_ico.png" alt="telefon">
+                    <span>+380632761621</span>
+                </div>
+                <div class="footer-email-div">
+                    <img src="img/footer/email_ico.png" alt="Email">
+                    <span class="footer_my-email">semenzelenskij@gmail.com</span>
+                </div>
+            </div>
+            <div class="contacts_sticky">
+                <a href="viber://chat?number=%2B380632761621">
+                    <img src="img/footer/viber-ico.png" alt="viber-ico">
+                </a>
+                <a href="https://t.me/maudzydun" target="_blank">
+                    <img src="img/footer/telegram_ico.png" alt="telefon_ico">
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
