Фінальна версія фронтенду. Додав вспливаюче вікно навігації для мобільних девайсів

--- a/index.html
+++ b/index.html
@@ -11,11 +11,37 @@
 <body>
     <header>
         <div  class="header _container">
+            <div class="hiden-smart-nav">
+                <nav class="smart-nav">
+                    <div class="smart-nav_container">
+                        <input type="checkbox">
+                        <div class="hamburger-lines">
+                            <span class="line line1"></span>
+                            <span class="line line2"></span>
+                            <span class="line line3"></span>
+                        </div>
+                        <ul class="smart_menu-items">
+                            <li>
+                                <a href="#main">Головна</a>
+                            </li>
+                            <li>
+                                <a href="#services">Наші послуги</a>
+                            </li>
+                            <li>
+                                <a href="#etaps">Етапи роботи</a>
+                            </li>
+                            <li>
+                                <a href="#contacts">Зв'язок</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
             <div class="header-logo">
                 <img src="img/header/logo.PNG" alt="logo">
             </div>
             <div class="header-nav">
-                <nav>
+                <nav class="laptop-nav">
                     <ul>
                         <li>
                             <a href="#main">Головна</a>
